--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,84 @@
-body {
+body, html {
+    margin: 0;
+    padding: 0;
     font-family: Arial, sans-serif;
 }
+
 header {
     background-color: #007BFF;
     color: white;
     padding: 10px 20px;
     text-align: center;
 }
+
 nav ul {
-    list-style-type: none;
+    list-style: none;
     padding: 0;
 }
+
 nav ul li {
     display: inline;
     margin-right: 10px;
 }
+
+.slider-container {
+    position: relative;
+    max-width: 100%;
+    margin: auto;
+    overflow: hidden;
+}
+
+.slider {
+    display: flex;
+    transition: 0.5s ease-in-out;
+}
+
+.slide {
+    display: none; /* Ocultar todas las slides por defecto */
+    width: 100%;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+.slide.active {
+    display: block; /* Mostrar solo la slide activa */
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
 section {
-    margin: 20px;
     padding: 20px;
+    margin: 20px;
     border: 1px solid #ccc;
 }
+
 footer {
     background-color: #333;
     color: white;
