--- a/styles.css
+++ b/styles.css
@@ -11,15 +11,64 @@ body, html {
     margin: auto;
     overflow: hidden;
 }
-
-.site-header, .site-footer {
-    background: #0056b3;
-    color: #ffffff;
-    padding: 20px 0;
+.site-header {
+    background-color: #0056b3;
+    color: white;
+    padding: 10px 20px;
 }
 
-.site-header h1, .site-footer p {
-    margin: 0 20px;
+.top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo img {
+    height: 50px; /* Ajustar según el tamaño de tu logo */
+    margin-right: 10px;
+}
+
+.logo span {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.social-contact {
+    display: flex;
+    align-items: center;
+}
+
+.social-contact a {
+    margin-left: 10px;
+}
+
+.social-contact .phone-numbers span {
+    display: block;
+    text-align: right;
+    margin-left: 10px;
+}
+
+.main-nav ul {
+    list-style-type: none;
+    padding: 0;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.main-nav li {
+    display: inline;
+    margin-right: 20px;
+}
+
+.main-nav a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 .main-nav ul {
